<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/colorApp"
        android:gravity="center"
        android:text="@string/add_song"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/et_songWriter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/song_writer"
        android:textStyle="italic|bold" />


    <EditText
        android:id="@+id/et_song_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/song_title"
        android:textStyle="italic|bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_chooseSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bt_round_blue"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/choose_song"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tv_songName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:layout_toRightOf="@id/bt_chooseSong" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        >

        <TextView
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/cancel"
            android:textColor="@color/colorApp"

            />
        <TextView
            android:id="@+id/bt_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/upload"
            android:textColor="@color/colorApp"
            android:layout_toRightOf="@id/bt_cancel" />

        />


    </RelativeLayout>
</LinearLayout>