<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Authentication.loginActicity">
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_app_logo"

            />





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:textStyle="italic|bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_quote"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="italic|bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center">

        <EditText
            android:id="@+id/et_loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_border_background"
            android:hint="@string/email"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="7dp"
            android:paddingRight="5dp"


            />

        <EditText
            android:id="@+id/et_loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_loginEmail"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_border_background"
            android:hint="@string/password"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="7dp"
            android:paddingRight="5dp"
            android:inputType="textPassword"



            />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_loginPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:text="@string/signIn"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:background="@color/colorComponents"
            />

        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_login"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:text="@string/forgot_passwrord"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account" />

        <TextView
            android:id="@+id/tv_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/no_account"
            android:text=" Signup"
            android:textColor="#FFA233"
            android:textStyle="bold"

            />

    </RelativeLayout>

</LinearLayout>