<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorApp"
        android:gravity="center"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:src="@drawable/applogo"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:textStyle="italic|bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_quote"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/signIn"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/email"
            android:paddingLeft="7dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"


            />

        <EditText
            android:id="@+id/et_loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_loginEmail"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="7dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"


            />

        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_loginPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/bt_round_blue"

            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/signIn"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bt_login"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/forgot_passwrord"
            android:textColor="@color/colorApp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/no_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_account"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/tv_Register"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_below="@+id/no_account"
            android:gravity="center"
            android:text=" Signup"
            android:textColor="@color/colorApp"
            android:textStyle="bold"

            />
    </LinearLayout>
</LinearLayout>