<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorApp"
    tools:context=".Authentication.authenticationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:src="@drawable/applogo"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:textStyle="italic|bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_quote"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/bt_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_round_white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            android:text="@string/signIn"
            android:textColor="@color/colorApp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bt_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_round_white"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/signUp"
            android:textColor="@color/colorApp"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>