<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".User.home.FragHome"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_albums"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showmore"
            android:textColor="@color/colorGrey"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragHome_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey"
        android:layout_marginLeft="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_songs"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:layout_marginLeft="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showmore"
            android:textColor="@color/colorGrey"
            android:textSize="14sp"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragHome_recyclerViewTopSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>