<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorApp"
    android:orientation="vertical"
    tools:context=".Authentication.forgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/confirm_order_toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="@color/colorGrey"
        android:background="@color/colorComponents"
        />
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/ic_app_logo"

            />





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="32sp"
            android:textStyle="italic|bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/app_quote"
            android:textColor="@color/colorWhite"
            android:textSize="22sp"
            android:textStyle="italic|bold" />
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    >
        <EditText
            android:id="@+id/et_forgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/et_border_background"
            android:hint="@string/email"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="7dp"
            android:paddingRight="5dp"

            />



        <Button
            android:id="@+id/bt_sendMail"
            android:background="@color/colorComponents"
            android:textColor="@color/colorWhite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_loginPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:text="Send Mail"
            android:textStyle="bold"
            />



</LinearLayout>

</LinearLayout>